--- a/WeirdChess/WeirdChess.csproj
+++ b/WeirdChess/WeirdChess.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE;WINDOWS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>..\WeirdChess.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -39,12 +40,19 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Core\GameEngine.cs" />
+    <Compile Include="Enums\GameScreenType.cs" />
     <Compile Include="Enums\MusicOptions.cs" />
     <Compile Include="Enums\SettingType.cs" />
     <Compile Include="Enums\SoundOptions.cs" />
+    <Compile Include="Exceptions\GameScreenTypeException.cs" />
+    <Compile Include="Exceptions\IteratorOutOfRangeException.cs" />
     <Compile Include="GameMain.cs" />
     <Compile Include="Interfaces\IDeserialiser.cs" />
+    <Compile Include="Interfaces\IGameScreen.cs" />
+    <Compile Include="Interfaces\IIterable.cs" />
+    <Compile Include="Interfaces\IIterator.cs" />
     <Compile Include="Interfaces\ISavable.cs" />
+    <Compile Include="Interfaces\IScreenController.cs" />
     <Compile Include="Interfaces\ISerialisationTool.cs" />
     <Compile Include="Interfaces\ISerialisationToolFactory.cs" />
     <Compile Include="Interfaces\ISerialiser.cs" />
@@ -53,6 +61,7 @@
     <Compile Include="Interfaces\ISettings.cs" />
     <Compile Include="Interfaces\ISettingsController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\Messages.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -69,10 +78,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Infrastructure\" />
-    <Folder Include="Utilities\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
