--- a/WeirdChess/WeirdChess.csproj
+++ b/WeirdChess/WeirdChess.csproj
@@ -47,6 +47,8 @@
     <Compile Include="Exceptions\GameScreenTypeException.cs" />
     <Compile Include="Exceptions\IteratorOutOfRangeException.cs" />
     <Compile Include="GameMain.cs" />
+    <Compile Include="Infrastructure\BaseScreen.cs" />
+    <Compile Include="Infrastructure\ScreenController.cs" />
     <Compile Include="Interfaces\IDeserialiser.cs" />
     <Compile Include="Interfaces\IGameScreen.cs" />
     <Compile Include="Interfaces\IIterable.cs" />
@@ -61,6 +63,7 @@
     <Compile Include="Interfaces\ISettings.cs" />
     <Compile Include="Interfaces\ISettingsController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\Iterator.cs" />
     <Compile Include="Utilities\Messages.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -76,13 +79,7 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Infrastructure\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
-    <None Include="ClassDiagram2.cd" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
