--- a/WeirdChess/WeirdChess.csproj
+++ b/WeirdChess/WeirdChess.csproj
@@ -47,7 +47,9 @@
     <Compile Include="Exceptions\GameScreenTypeException.cs" />
     <Compile Include="Exceptions\IteratorOutOfRangeException.cs" />
     <Compile Include="GameMain.cs" />
+    <Compile Include="Interfaces\IComponent.cs" />
     <Compile Include="Interfaces\IDeserialiser.cs" />
+    <Compile Include="Interfaces\IDrawable.cs" />
     <Compile Include="Interfaces\IGameScreen.cs" />
     <Compile Include="Interfaces\IIterable.cs" />
     <Compile Include="Interfaces\IIterator.cs" />
@@ -60,6 +62,7 @@
     <Compile Include="Interfaces\ISettingFactory.cs" />
     <Compile Include="Interfaces\ISettings.cs" />
     <Compile Include="Interfaces\ISettingsController.cs" />
+    <Compile Include="Interfaces\IDrawableComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\Messages.cs" />
   </ItemGroup>
@@ -78,10 +81,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Infrastructure\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
-    <None Include="ClassDiagram2.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
