--- a/WeirdChess/WeirdChess.csproj
+++ b/WeirdChess/WeirdChess.csproj
@@ -44,11 +44,13 @@
     <Compile Include="Enums\MusicOptions.cs" />
     <Compile Include="Enums\SettingType.cs" />
     <Compile Include="Enums\SoundOptions.cs" />
+    <Compile Include="Exceptions\DrawableComponentException.cs" />
     <Compile Include="Exceptions\GameScreenTypeException.cs" />
     <Compile Include="Exceptions\IteratorOutOfRangeException.cs" />
     <Compile Include="GameMain.cs" />
+    <Compile Include="Infrastructure\DrawableScreen.cs" />
     <Compile Include="Interfaces\IComponent.cs" />
-    <Compile Include="Infrastructure\BaseScreen.cs" />
+    <Compile Include="Infrastructure\Screen.cs" />
     <Compile Include="Infrastructure\ScreenController.cs" />
     <Compile Include="Interfaces\IDeserialiser.cs" />
     <Compile Include="Interfaces\IDrawable.cs" />
@@ -82,9 +84,7 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Infrastructure\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
