Iterator unit tests and Iterator constructors
Added unit tests for IIterator. Added unit tests for concrete Iterator
class, which implements IIterator.
Added constructors for Iterator class. Everything else throws
NotImplementedException.

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="IteratorTestCases\AbstractIteratorTestCase.cs" />
+    <Compile Include="IteratorTestCases\IteratorTestCase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
