Extended ISetting UnitTests
Added additional tests for ISetting.
Edited ISetting to include an exception for invalid values.
Created InvalidSettingValueException.cs.
Created abstract Setting class which implements ISetting.
Created ScreenResolitionSetting and MusicSetting classes, which extend
Setting.
Concrete classes are not fully implemented. TODOs added.
Created MusicSettingTestCase and ScreenResolutionSettingTestCase which
extend AbstractISettingTestCase and currently fail.

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -54,6 +54,8 @@
     <Compile Include="IteratorTestCases\IteratorTestCase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingTestCases\AbstractISettingTestCase.cs" />
+    <Compile Include="SettingTestCases\MusicSettingTestCase.cs" />
+    <Compile Include="SettingTestCases\ScreenResolutionSettingTestCase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WeirdChess\WeirdChess.csproj">
