--- a/WeirdChess/WeirdChess.csproj
+++ b/WeirdChess/WeirdChess.csproj
@@ -46,9 +46,13 @@
     <Compile Include="Enums\SoundOptions.cs" />
     <Compile Include="Exceptions\DrawableComponentException.cs" />
     <Compile Include="Exceptions\GameScreenTypeException.cs" />
+    <Compile Include="Exceptions\InvalidSettingValueException.cs" />
     <Compile Include="Exceptions\IteratorOutOfRangeException.cs" />
     <Compile Include="GameMain.cs" />
     <Compile Include="Infrastructure\DrawableScreen.cs" />
+    <Compile Include="Infrastructure\MusicSetting.cs" />
+    <Compile Include="Infrastructure\ScreenResolutionSetting.cs" />
+    <Compile Include="Infrastructure\Setting.cs" />
     <Compile Include="Interfaces\IComponent.cs" />
     <Compile Include="Infrastructure\Screen.cs" />
     <Compile Include="Infrastructure\ScreenController.cs" />
@@ -68,6 +72,7 @@
     <Compile Include="Interfaces\ISettingsController.cs" />
     <Compile Include="Interfaces\IDrawableComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\AllowedSettings.cs" />
     <Compile Include="Utilities\Iterator.cs" />
     <Compile Include="Utilities\Messages.cs" />
   </ItemGroup>
